fix: ajustes de configuração — remoção JPA/DevTools, desativação Arrow Snowflake